<resources>
    <string name="app_name">MyVisit</string>

    <string name="message">Messages</string>
    <string name="group_message">Groups Message</string>
    <string name="all_message">All Messages</string>
    <string name="send_message">send Messages</string>
    <string name="write_message">write your message here...</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_messages">Messages</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_home">Home</string>

    <string name="name">Weam Kalantan</string>
    <string name="image_pro">image </string>

    <string name="profile">Profile </string>
    <string name="id">ID* </string>
    <string name="email">Email* </string>
    <string name="mobile">mobile* </string>
    <string name="position">position* </string>
    <string name="full_name">Full name* </string>

    <string name="sign">Sign in / Sign Up </string>

    <string name="add">Add </string>
    <string name="employee">Employee </string>

    <string name="notification">Notifications</string>
    <string name="help">Help</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_settings">Settings</string>

    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="ShowDate">Date</string>
    <string name="VisitingTime">Visit Time</string>
    <string name="WaitingTime">Waiting Time</string>
    <string name="CrowdState">Crowd State</string>

    <string name="hint_minute">Minute</string>
    <string name="message_minutes">Please Enter Minutes...</string>

    <string name="FirstPeriod">First Period : 6:00 AM | 12:00 PM"</string>
    <string name="SecondPeriod">Second Period : 6:00 AM | 12:00 PM"</string>
    <string name="ThirdPeriod">Third Period : 6:00 AM | 12:00 PM"</string>
    <string name="expand_me_to_see_a_detailed_message">Expand me to see a detailed message!</string>
    <string name="today">TODAY</string>

</resources>
