<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:visibility="visible"
    >

    <Button
        android:id="@+id/buttonGroup"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="40dp"
        android:background="@drawable/border"
        android:baselineAligned="false"
        android:drawableTop="@drawable/group_user"
        android:padding="10dp"
        android:text="@string/group_message" />

    <Button
        android:id="@+id/buttonAll"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="230dp"
        android:background="@drawable/border"
        android:drawableTop="@drawable/user"
        android:padding="10dp"
        android:text="@string/all_message" />

    <Button
        android:id="@+id/btn_employee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/employee"
        android:layout_marginTop="200dp"/>


</FrameLayout>

