<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/WTbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="266dp"
        android:layout_marginTop="148dp"
        android:text="@string/WaitingTime"

        android:textAllCaps="false" />

    <TextView
        android:id="@+id/text_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/editTextDate"
        android:layout_width="388dp"
        android:layout_height="113dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:text="@string/ShowDate"
        android:textColor="#000000"
        android:textSize="24sp" />

    <Button
        android:id="@+id/CSbutton"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="149dp"
        android:text="@string/CrowdState"
        android:textAllCaps="false" />


    <Button
        android:id="@+id/VTbutton"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="142dp"
        android:layout_marginTop="149dp"
        android:text="@string/VisitingTime"

        android:textAllCaps="false" />

    <FrameLayout
        android:id="@+id/flNew"
        android:layout_width="401dp"
        android:layout_height="526dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="200dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="2dp"


        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</RelativeLayout>
