<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/profile_grad"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/grad"
        android:contentDescription="@string/image_pro" />

    <ImageView
        android:id="@+id/img_user"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        android:background="@drawable/add_circle"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="00dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/image_pro"
        android:padding="3dp" />

    <!--<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_user"
        android:layout_centerHorizontal="true"
        android:text="@string/name"
        android:textSize="32sp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-light"
        /> -->

    <TextView
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        android:layout_below="@+id/profile_grad"
        android:text="@string/profile"
        />

    <TextView
        android:id="@+id/user_profile_id"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:textSize="20sp"
        android:background="@drawable/round_corner_border"
        android:layout_below="@+id/profile"

        />

    <ImageView
        android:id="@+id/image_card"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:background="@drawable/ic_id_card"
        android:layout_marginTop="265dp"
        android:layout_marginStart="40dp"
        android:contentDescription="@string/image_pro"

        />

    <EditText
        android:id="@+id/text_card"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="260dp"
        android:layout_marginStart="100dp"
        android:hint="@string/id"
        android:inputType="text"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/user_profile_full_name"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textSize="20sp"
        android:background="@drawable/round_corner_border"
        android:layout_below="@+id/user_profile_id"

        />

    <ImageView
        android:id="@+id/image_fullname"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:background="@drawable/user"
        android:layout_marginTop="25dp"
        android:layout_marginStart="40dp"
        android:contentDescription="@string/image_pro"
        android:layout_below="@+id/image_card"

        />

    <EditText
        android:id="@+id/text_fullname"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="100dp"
        android:hint="@string/full_name"
        android:inputType="text"
        android:textSize="20sp"
        android:layout_below="@+id/text_card"
        />

    <TextView
        android:id="@+id/user_profile_mobile"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textSize="20sp"
        android:background="@drawable/round_corner_border"
        android:layout_below="@+id/user_profile_full_name"

        />

    <ImageView
        android:id="@+id/image_mobile"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:background="@drawable/phone"
        android:layout_marginTop="18dp"
        android:layout_marginStart="40dp"
        android:contentDescription="@string/image_pro"
        android:layout_below="@+id/image_fullname"

        />

    <EditText
        android:id="@+id/text_mobile"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="100dp"
        android:hint="@string/mobile"
        android:inputType="number"
        android:textSize="20sp"
        android:layout_below="@+id/text_fullname"
        />

    <TextView
        android:id="@+id/user_profile_email"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textSize="20sp"
        android:background="@drawable/round_corner_border"
        android:layout_below="@+id/user_profile_mobile"

        />

    <ImageView
        android:id="@+id/image_email"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:background="@drawable/email"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:contentDescription="@string/image_pro"
        android:layout_below="@+id/image_mobile"

        />

    <EditText
        android:id="@+id/text_email"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="100dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:layout_below="@+id/text_mobile"
        />

    <TextView
        android:id="@+id/user_profile_position"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textSize="20sp"
        android:background="@drawable/round_corner_border"
        android:layout_below="@+id/user_profile_email"

        />

    <ImageView
        android:id="@+id/image_position"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:background="@drawable/user_position"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:contentDescription="@string/image_pro"
        android:layout_below="@+id/image_email"

        />

    <EditText
        android:id="@+id/text_position"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="7dp"
        android:layout_marginStart="100dp"
        android:hint="@string/position"
        android:inputType="text"
        android:textSize="20sp"
        android:layout_below="@+id/text_email"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:background="@drawable/border_round_circle_color"
        android:textColor="#000000"
        android:textSize="20sp"
        android:layout_marginTop="90dp"
        android:layout_marginStart="100dp"
        android:layout_below="@+id/user_profile_email"
        android:layout_centerHorizontal="true"
        />


</RelativeLayout>


