<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EmployeeProfile">

    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:background="@color/White"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Black"
        android:weightSum="3"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:textSize="20dp"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:textColor="@color/White"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="notifiction"
            android:textSize="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/White"/>

        <TextView
            android:id="@+id/doneediting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Done"
            android:textSize="20dp"
            android:layout_weight="1"
            android:gravity="right"
            android:layout_marginRight="5dp"
            android:textColor="@color/White"/>
    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/White"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center"
        android:background="@color/Black">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/person"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/Black"
        android:text="PROFILE"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <EditText
        android:id="@+id/emp_pro_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/border"
        android:textSize="20dp"
        android:padding="10dp"
        android:hint="Emp Name"
        android:enabled="false"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
      android:padding="10dp"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/ic_id_card"
            android:contentDescription="@string/image_pro" />

        <EditText
            android:id="@+id/emp_pro_id"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:hint="@string/id"
            android:inputType="number"
            android:enabled="false"
            android:textSize="20sp"
            />
    </LinearLayout>


    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/phone"
            android:contentDescription="@string/image_pro"
            android:layout_below="@+id/image_fullname"

            />

        <EditText
            android:id="@+id/emp_pro_mobile"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:hint="@string/mobile"
            android:inputType="number"
            android:textSize="20sp"
            android:enabled="false"
            android:layout_below="@+id/text_fullname"
            />

    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/email"
            android:contentDescription="@string/image_pro"
            android:layout_below="@+id/image_mobile"

            />

        <EditText
            android:id="@+id/emp_pro_email"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="20sp"
            android:enabled="false"
            android:layout_below="@+id/text_mobile"
            />
    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/user_position"
            android:contentDescription="@string/image_pro"
            android:layout_below="@+id/image_email"

            />

        <EditText
            android:id="@+id/emp_pro_postion"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:hint="@string/position"
            android:inputType="text"
            android:textSize="20sp"
            android:layout_below="@+id/text_email"
            android:enabled="false"
            />

    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        />

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:background="@color/Black"

        android:orientation="horizontal">

        <ImageView
            android:id="@+id/empremove"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:src="@drawable/remove"/>

        <ImageView
            android:id="@+id/empedit"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:src="@drawable/editprofile"/>

    </LinearLayout>


</LinearLayout>